--- a/Challenge1/package.json
+++ b/Challenge1/package.json
@@ -34,7 +34,8 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "forta-agent": "^0.1.48"
+    "forta-agent": "^0.1.48",
+    "forta-agent-tools": "^3.2.12"
   },
   "devDependencies": {
     "@types/jest": "^29.5.10",
