--- a/Challenge2/package.json
+++ b/Challenge2/package.json
@@ -35,8 +35,12 @@
     "forta-agent-tools": "^3.2.12"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.10",
+    "@types/nodemon": "^1.19.0",
     "jest": "^29.7.0",
-    "nodemon": "^2.0.8"
+    "nodemon": "^2.0.8",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.3.4"
   }
 }
