--- a/Challenge2/package.json
+++ b/Challenge2/package.json
@@ -31,6 +31,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "forta-agent": "^0.1.48",
     "forta-agent-tools": "^3.2.12"
   },
