--- a/Challenge2b/package.json
+++ b/Challenge2b/package.json
@@ -41,6 +41,7 @@
     "jest": "^29.7.0",
     "nodemon": "^2.0.8",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "forta-agent-tools": "^3.2.12"
   }
 }
