--- a/Challenge2b/package.json
+++ b/Challenge2b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/forta-network/forta-bot-sdk/tree/master/starter-project",
   "licenseUrl": "https://github.com/forta-network/forta-bot-sdk/blob/master/starter-project/LICENSE.md",
   "promoUrl": "https://forta.org",
+  "format": "prettier --write \"src/**/*.ts\"",
   "chainIds": [
     1
   ],
@@ -38,10 +39,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.10",
     "@types/nodemon": "^1.19.0",
+    "forta-agent-tools": "^3.2.12",
     "jest": "^29.7.0",
     "nodemon": "^2.0.8",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.3.4",
-    "forta-agent-tools": "^3.2.12"
+    "typescript": "^4.3.4"
   }
 }
