doc: DoD should be complete

--- a/Challenge3/package.json
+++ b/Challenge3/package.json
@@ -1,10 +1,10 @@
 {
   "name": "makerdao-bridge-invariant-bot",
-  "displayName": "Bot Checking Uniswap V3 Swaps",
+  "displayName": "MakerDAO Bridge Invariant Bot",
   "version": "0.0.1",
-  "description": "This bot detects Uniswap V3 swaps on Ethereum Mainnet.",
-  "longDescription": "This bot monitors the Ethereum Mainnet for Uniswap V3 swaps. It listens for Swap events and checks if they are emitted by an offical Uniswap V3 pool contract.",
-  "repository": "https://github.com/deca12x/FortaBotChallenges/tree/main/Challenge2",
+  "description": "This bot monitors the MakerDAO L1-L2 bridge invariants for Optimism and Arbitrum.",
+  "longDescription": "This bot monitors the DAI locked in L1 escrow contracts for Optimism and Arbitrum and compares it with the DAI supply on L2 networks.",
+  "repository": "https://github.com/deca12x/FortaBotChallenges/tree/main/Challenge3",
   "licenseUrl": "https://github.com/forta-network/forta-bot-sdk/blob/master/starter-project/LICENSE.md",
   "promoUrl": "https://forta.org",
   "format": "prettier --write \"src/**/*.ts\"",
